# async-rl-lab

./: .gitignore  CLAUDE.md  README.md  experiments.md  pyproject.toml
buffers/: base.py  bounded_queue.py  double_buffer.py  redis_stream.py  sync_buffer.py
configs/: experiment.yaml
core/: coordinator.py  inference_process.py  launcher.py  trainer.py  types.py  vllm_inference_worker.py
experiments/: buffer_comparison.py  distillation_vs_grpo.py  dtype_mismatch.py  run_experiment.py  sampling_mask.py  staleness_tradeoff.py  weight_sync_benchmark.py
interrupts/: base.py  batch_sync.py  implicit_continuation.py  soft_drain.py
scorers/: base.py  distillation_scorer.py  verifier_scorer.py
staleness/: base.py  hybrid.py  is_reweighting.py  no_filter.py  version_rejection.py
tests/: test_all_configs.py  test_buffers.py  test_coordinator.py  test_staleness.py  test_weight_sync.py
utils/: factory.py  fsdp.py  gpu_allocator.py  gsm8k.py  metrics.py  plotting.py
weight_sync/: base.py  filesystem_sync.py  nccl_broadcast.py  nccl_bucketed.py  zmq_notify_fs.py
